HelloUltraviolet/Fixtures/RejectedSource/Patterns/ParsePatternError/Expected.uv
//! Expected diagnostic metadata for the ParsePatternError rejected-source specimen.

expectedDiagnostic("E-SRC-0520", "rule.17.Parse-Pattern-Err")
